# vibe-factory

./: .dockerignore  .env.example  .env.production.example  .gitignore  AGENTS.md  CLAUDE.md  Cargo.toml  DEV_ENV_STATUS.md  DOCKER_DEV.md  Dockerfile  Dockerfile.dev  FACTORY_FLOOR_INTEGRATION_PLAN.md  FACTORY_FLOOR_ROADMAP.md  MANAGER_AGENT.md  MANAGER_AGENT_ARCHITECTURE.md  Makefile.railway  PHASE_1_TASKS.md  PHASE_2_TASKS.md  PROGRAMMER_JOKES.md  RAILWAY_CLI_REFERENCE.md  RAILWAY_DATABASE_GUIDE.md  RAILWAY_DB_IMPLEMENTATION.md  RAILWAY_DEPLOY.md  RAILWAY_DEPLOYMENT.md  RAILWAY_ENVIRONMENT.md  RAILWAY_SETUP_SUMMARY.md  RAILWAY_TESTING.md  README.md  README_WORKTREE.md  TESTING_EXECUTION_PLAN.md  TESTING_SUMMARY.md  WORKTREE_README.md  build-npm-package.sh  check-both.sh  docker-compose.dev.yml  fart.sh  mcp_test.js  package-lock.json  package.json  pnpm-lock.yaml  (+8 more)
.cargo/: config.toml
crates/deployment/: Cargo.toml
crates/deployment/src/: lib.rs
crates/executors/: Cargo.toml  default_mcp.json  default_profiles.json
crates/executors/src/: approvals.rs  command.rs  lib.rs  logs.rs  mcp_config.rs  profile.rs  stdout_dup.rs  test_executor_actions.rs
crates/executors/src/actions/: coding_agent_follow_up.rs  coding_agent_initial.rs  mod.rs  script.rs  standard.rs  standard_follow_up.rs
crates/executors/src/executors/: amp.rs  claude.rs  codex.rs  copilot.rs  cursor.rs  droid.rs  gemini.rs  mod.rs  opencode.rs  patch.rs  qwen.rs  standard.rs
crates/executors/src/executors/acp/: client.rs  harness.rs  mod.rs  normalize_logs.rs  session.rs
crates/executors/src/executors/claude/: client.rs  protocol.rs  types.rs
crates/executors/src/executors/codex/: client.rs  jsonrpc.rs  normalize_logs.rs  session.rs
crates/executors/src/executors/cursor/: mcp.rs
crates/executors/src/logs/: amp.rs  gemini.rs  mod.rs  patch.rs  plain_text_processor.rs  stderr_processor.rs
crates/executors/src/logs_/: gemini.rs
crates/executors/tests/: droid_snapshots.rs
crates/executors/tests/snapshots/: droid_snapshots__edits_and_execution_session.snap  droid_snapshots__glob_permission_denied_session.snap  droid_snapshots__hello_world_session.snap  droid_snapshots__insufficient_perms_session.snap  droid_snapshots__rc_claude_session.snap  droid_snapshots__rc_claude_session.snap.new
crates/remote/: Cargo.toml  Dockerfile  README.md  docker-compose.yml
crates/remote/.sqlx/: query-03bed647d53df8ac81883bf9e27181706207a8fc3202e8af0d5b116bbc116369.json  query-08820e32d70c0770fd392a22b9842a0b299b9d567aea487f22194101b63e1a05.json  query-0a7c54b7c330706e87ee468c5172107670b480c147c4a6886bcab2e0a1ecbe4b.json  query-0f063fae1a1042a68cbe05bb32e66f5089140ba2844d1bca56e8dfe5cbfb1edb.json  query-102c713ffb356ffdc29de39229df23caec39da2328bde0e4c074b805a5cca043.json  query-15495a493451f4ba0eb0dc1ad737893744aed8ca2ac9b6c7a6d215ef4bdfe4ab.json  query-1f6e053fa269b63dfc7336f65a1c8a141acf0242c4428993e6c81a388857be4f.json  query-2583ecb6be6286b715003b624904673c928d8d5d7eb7e5ec5e2a40bcdd06c358.json  query-376ef3a07a316a1a0b04ea088b06830fdb4af6d68307960532604f83d79e4743.json  query-396cdfde3a9264485f54cda7898ccf5204d8b3f5919c81a236da7807563a4eec.json  query-3a2bfd9609efd22415fda035b9d2c1288e8e9633caa68ac468eaf7cf8c90920a.json  query-3ac51a5b5fa96b3f07a77b1867804ef7c807df0e30c2d574a3d4547c5aa51d5e.json  query-3ada79bdaf0712f28902911de48d59d39acb91bb88430f6688130d3c1397779d.json  query-3dd15d5705b0e0ac28f9da043717e7311b3394a6bec0e0b449ca3116b048f812.json  query-4a4f3240d2b51c0f894fb52e2ce85730f5c2e672ad5b4e3dc0ffdac7a7772333.json  query-4c9e9ec49c731b10a86132c2e0b21cbf6b5d610ca10f03f9685edafae5d30d55.json  query-4d023cbd5f6e90391a566b568c952293e8acbe672ca483ee919c318da83457ee.json  query-525f47ef15d96a9174b327a50a3a9f140040808f2a3382d3ab9d4cf52edde1f4.json  query-537e1feb5e633c8861b2d7bae1b56a1294fcb7711c5b853f99e8069785f5f3b9.json  query-5746f2646d664dca510d219ff49e92dba2db3953683e5cad3df1d0aa3c244562.json  query-57d67b5f739361f245360eda283f7703cc9cd8153070da11e5723ecb4464106b.json  query-5d4ec1ed67a88e2e837b51c77b5cd2d45a17e8788c022f463e449e81d34717f0.json  query-5dd1449744004abe76e314c06a0f1eb2227622832c53e46ea8c5ec58982f261a.json  query-616f12d2066b9552f3e4a474861a265d4181180c4d5985e758d44f066958e137.json  query-637e9f2eddc0048017649ffa5fde0b92e49120951147a0022f6431e75e89172f.json  query-708a1c38836485e22ba520f57ac9c10729fac71b7c18694933c38f5a8fb47dd9.json  query-71391117cc253f1ee219565a68cd85f9d4dd7fb5a9b446a6023f9b2c8266c5b1.json  query-78ff22e590be796b3007247bdc8333d62f6397137106d4dd37aded1417a82e36.json  query-7cdff1c1431b744ae3b7b195718800f7c2d618b538553171b89ab375e6ed247d.json  query-7e961b25777b7fec878e4e8a7ef500fa472b7b4ac4201fafbad1ac01eb07e549.json  query-8088dec33f2e30c1a9374ce0b9074224a21e2d7d90d7ceb3524e84b6d8f4edf1.json  query-91946f09d037a4f94325891a900fd79297b64160c669aa221e530815920aa3f8.json  query-919e2bba0aae582b979c0ada196dfb8785b54f0b98d407a77e7431ba010fa094.json  query-93d2510b03f5b9a8b99a22c582557f8b629ba958663331f4332be2d90ecbd456.json  query-a580ecae3c8fc41dde565582593b25a7976b85d6f6e53c0722c9fe04e65fa9c0.json  query-a6f014f2421a7badd8fc8e8111e06c87783523c227c5a1d12e012126ce0e19db.json  query-aecaa7eef110531413c59e67e42d259216580075da771952be3bd731002583e5.json  query-af22e1fec6349809176a905999322720c541d4b79ed9b6b4cc0e751908d4f01d.json  query-b05637ff3d89b69e7e0e25b9814b3dfdb6387abe4294514a8b85cf9b65ba31a3.json  query-b3e40a860282796f3a8aeb62d11d4e320b57bc3405bfdd9cb0f1c14d4b909082.json  (+10 more)
crates/remote/migrations/: 20251001000000_shared_tasks_activity.sql  20251002000000_soft_delete_shared_tasks.sql
crates/remote/src/: app.rs  auth.rs  clerk.rs  config.rs  lib.rs  main.rs  state.rs
crates/remote/src/activity/: broker.rs  mod.rs
crates/remote/src/api/: tasks.rs
crates/remote/src/auth/: middleware.rs
crates/remote/src/db/: activity.rs  identity.rs  listener.rs  migrate.rs  mod.rs  organizations.rs  pool.rs  projects.rs  tasks.rs  users.rs
crates/remote/src/routes/: activity.rs  mod.rs  organizations.rs  tasks.rs  users.rs
crates/remote/src/ws/: message.rs  mod.rs  session.rs
(+1080 files in other folders)
