[package]
name = "remote"
version = "0.0.1"
edition = "2024"
publish = false

[dependencies]
anyhow = { workspace = true }
async-trait = "0.1"
axum = { workspace = true }
chrono = { version = "0.4", features = ["serde"] }
futures = "0.3"
serde = { workspace = true }
serde_json = { workspace = true }
sqlx = { version = "0.8.6", default-features = false, features = ["runtime-tokio-rustls", "postgres", "uuid", "chrono", "json", "macros", "migrate"] }
tokio = { workspace = true }
tokio-stream = { version = "0.1.17", features = ["sync"] }
tower = { version = "0.5", features = ["util"] }
tower-http = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
thiserror = { workspace = true }
uuid = { version = "1", features = ["serde", "v4"] }

[dev-dependencies]
once_cell = "1"
reqwest = { version = "0.12", features = ["json"] }
serde_json = { workspace = true }
tower = { version = "0.5", features = ["util"] }
