[package]
name = "remote"
version = "0.0.1"
edition = "2024"
publish = false

[dependencies]
anyhow = { workspace = true }
async-trait = { workspace = true } 
axum = { workspace = true }
axum-extra = { version = "0.10.3", features = ["typed-header"] }
chrono = { version = "0.4", features = ["serde"] }
dashmap = "6.1"
futures = "0.3"
jsonwebtoken = { version = "10.0.0", features = ["rust_crypto"]}
reqwest = { version = "0.12", features = ["json"] }
secrecy = "0.10.3"
serde = { workspace = true }
serde_json = { workspace = true }
sqlx = { version = "0.8.6", default-features = false, features = ["runtime-tokio-rustls", "postgres", "uuid", "chrono", "json", "macros", "migrate"] }
tokio = { workspace = true }
tokio-stream = { version = "0.1.17", features = ["sync"] }
tower = { version = "0.5", features = ["util"] }
tower-http = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
thiserror = { workspace = true }
uuid = { version = "1", features = ["serde", "v4"] }

[dev-dependencies]
once_cell = "1"
serde_json = { workspace = true }
tower = { version = "0.5", features = ["util"] }
